--- a/Tracing.NuGet/Package.nuspec
+++ b/Tracing.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Tracing</id>
-    <version>1.0.2</version>
+    <version>1.0.3-pre4</version>
     <title>Tracing.NET - A simple Logger/Tracer abstraction</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -16,6 +16,9 @@
       xamarin pcl windows phone winphone wp8 wpa81 win81 windowsphone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch
     </tags>
     <releaseNotes>
+      1.0.3
+      - Bug fix in AndroidLogTracer: Add exception details to log output
+      
       1.0.2
       - Internal refactoring and cleanup
       - Remove Guards dependency
@@ -42,11 +45,6 @@
     <file src="..\Tracing.Android\bin\Release\Tracing.dll" target="lib\monoandroid10\Tracing.dll" />
     <file src="..\Tracing.Android\bin\Release\Tracing.pdb" target="lib\monoandroid10\Tracing.pdb" />
     <file src="..\Tracing.Android\bin\Release\Tracing.xml" target="lib\monoandroid10\Tracing.xml" />
-    
-    <!--Xamarin.iOS Classic API-->
-    <file src="..\Tracing.iOS\bin\iPhone\Release\Tracing.dll" target="lib\monotouch10\Tracing.dll" />
-    <file src="..\Tracing.iOS\bin\iPhone\Release\Tracing.pdb" target="lib\monotouch10\Tracing.pdb" />
-    <file src="..\Tracing.iOS\bin\iPhone\Release\Tracing.xml" target="lib\monotouch10\Tracing.xml" />
     
     <!--Xamarin.iOS Unified API-->
     <file src="..\Tracing.iOSUnified\bin\iPhone\Release\Tracing.dll" target="lib\xamarin.ios10\Tracing.dll" />
