--- a/Tracing.NuGet/Package.nuspec
+++ b/Tracing.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Tracing</id>
-    <version>1.0.3-pre4</version>
+    <version>1.0.3-pre5</version>
     <title>Tracing.NET - A simple Logger/Tracer abstraction</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -18,6 +18,7 @@
     <releaseNotes>
       1.0.3
       - Bug fix in AndroidLogTracer: Add exception details to log output
+      - Allow empty message tracing
       - Several minor bug fixes
       
       1.0.2
