--- a/Tracing.NuGet/Package.nuspec
+++ b/Tracing.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Tracing</id>
-    <version>1.0.3-pre5</version>
+    <version>2.0.0-pre</version>
     <title>Tracing.NET - A simple Logger/Tracer abstraction</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -13,22 +13,25 @@
     <description>Tracing.NET provides basic logging/tracing infrastructure such as an abstracted logger interface ITracer as well as platform specific tracer implementations.</description>
     <tags>
       tracing tracer logging logger ITracer log trace
-      xamarin pcl windows phone winphone wp8 wpa81 win81 windowsphone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch
+      xamarin pcl windows phone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch
     </tags>
     <releaseNotes>
-      1.0.3
-      - Bug fix in AndroidLogTracer: Add exception details to log output
-      - Allow empty message tracing
-      - Several minor bug fixes
-      
-      1.0.2
-      - Internal refactoring and cleanup
-      - Remove Guards dependency
-      
-      1.0.1
-      - Initial release
+2.0.0
+- Added support for .Net Standard
+
+1.0.3
+- Bug fix in AndroidLogTracer: Add exception details to log output
+- Allow empty message tracing
+- Several minor bug fixes
+
+1.0.2
+- Internal refactoring and cleanup
+- Remove Guards dependency
+
+1.0.1
+- Initial release
     </releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2017</copyright>
     <language>en-US</language>
     <dependencies/>
   </metadata>
@@ -53,21 +56,6 @@
     <file src="..\Tracing.iOSUnified\bin\iPhone\Release\Tracing.pdb" target="lib\xamarin.ios10\Tracing.pdb" />
     <file src="..\Tracing.iOSUnified\bin\iPhone\Release\Tracing.xml" target="lib\xamarin.ios10\Tracing.xml" />
     
-    <!--Windows Phone 8-->
-    <file src="..\Tracing.WindowsPhone8\Bin\Release\Tracing.dll" target="lib\wp8\Tracing.dll" />
-    <file src="..\Tracing.WindowsPhone8\Bin\Release\Tracing.pdb" target="lib\wp8\Tracing.pdb" />
-    <file src="..\Tracing.WindowsPhone8\Bin\Release\Tracing.xml" target="lib\wp8\Tracing.xml" />
-    
-    <!--Windows Phone 8.1-->
-    <file src="..\Tracing.WindowsPhone81\Bin\Release\Tracing.dll" target="lib\wpa81\Tracing.dll" />
-    <file src="..\Tracing.WindowsPhone81\Bin\Release\Tracing.pdb" target="lib\wpa81\Tracing.pdb" />
-    <file src="..\Tracing.WindowsPhone81\Bin\Release\Tracing.xml" target="lib\wpa81\Tracing.xml" />
-    
-    <!--Windows Store-->
-    <file src="..\Tracing.WindowsStore\Bin\Release\Tracing.dll" target="lib\win81\Tracing.dll" />
-    <file src="..\Tracing.WindowsStore\Bin\Release\Tracing.pdb" target="lib\win81\Tracing.pdb" />
-    <file src="..\Tracing.WindowsStore\Bin\Release\Tracing.xml" target="lib\win81\Tracing.xml" />
-
     <!--Universal Windows Platform-->
     <file src="..\Tracing.UWP\bin\Release\Tracing.dll" target="lib\uap10.0\Tracing.dll" />
     <file src="..\Tracing.UWP\bin\Release\Tracing.pdb" target="lib\uap10.0\Tracing.pdb" />
