--- a/build.yml
+++ b/build.yml
@@ -24,6 +24,7 @@ steps:
   inputs:
     FileNames: |
      Tracing.csproj
+     AssemblyInfo.cs
     InsertAttributes: true
     Title: 'Tracing'
     Description: ''
