--- a/build.yml
+++ b/build.yml
@@ -61,7 +61,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'Run UnitTests'
-  continueOnError: true # TODO: Activate test step
+  continueOnError: false
   inputs:
     command: test
     projects: '**/*.Tests.csproj'
