--- a/build.yml
+++ b/build.yml
@@ -27,24 +27,21 @@ steps:
      AssemblyInfo.cs
     InsertAttributes: true
     Title: 'Tracing'
-    Description: ''
+    Description: 'Tracing.NET - A simple Logger/Tracer abstraction'
     Company: 'superdev GmbH'
     Copyright: '(c) $(date:yyyy) superdev GmbH'
     VersionNumber: '$(Build.BuildNumber)'
     FileVersionNumber: '$(Build.BuildNumber)'
-
 
 - task: NuGetToolInstaller@0
   displayName: 'Use NuGet 4.4.1'
   inputs:
     versionSpec: 4.4.1
 
-
 - task: NuGetCommand@2
   displayName: 'NuGet restore'
   inputs:
     restoreSolution: '$(Parameters.solution)'
-
 
 - powershell: |
    Write-Host "##vso[task.setvariable variable=PackageVersion]$(Build.BuildNumber)"
@@ -64,7 +61,7 @@ steps:
   continueOnError: false
   inputs:
     command: test
-    projects: '**/*.Tests.csproj'
+    projects: '**/Tracing.Tests.csproj'
     arguments: ''
 
 - task: NuGetCommand@2
